@@ -101,7 +101,8 @@ projects work like they should;</li>
 </div>
 <div class="section" id="command-reference">
 <h1><a class="toc-backref" href="#id3" name="command-reference">Command Reference</a></h1>
-<p>The following commands are built into twill.</p>
+<p>The following commands are built into twill.  Note that all text after
+a '#' is ignored as a comment, unless it's in a quoted string.</p>
 <div class="section" id="browsing">
 <h2><a class="toc-backref" href="#id4" name="browsing">Browsing</a></h2>
 <p><strong>go</strong> <em>&lt;url&gt;</em> -- visit the given URL.</p>
