@@ -1,4 +1,14 @@
+2005-06-06  Titus Brown  <t@issola.caltech.edu>
+
+	* Fixed quoted handling of __stuff__.
+
+	* More intelligent pyparsing stuff from Paul McGuire; in particular,
+	  comments on the ends of lines are allowed, and '#' in arguments
+	  is disallowed.
+
 2005-06-04  Titus Brown  <t@issola.caltech.edu>
+
+	* added a couple of command line options using 'optparse'.
 
 	* added __url__ ==> current URL.
 
